経路生成ボタンのクリック時のJS処理追加

--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -83,5 +83,9 @@
 <th:block th:fragment="packing">
     <script src="/js/packings.js"></script>
 </th:block>
+
+<th:block th:fragment="createPlanSubmit">
+    <script src="/js/createPlanSubmit.js"></script>
+</th:block>
 </body>
 </html>
