--- a/src/main/resources/templates/share/plan.html
+++ b/src/main/resources/templates/share/plan.html
@@ -4,22 +4,16 @@
 <body class="flex flex-col min-h-screen">
 <th:block th:replace="~{fragment/header :: header}"/>
 <main class="flex flex-col items-center flex-grow">
-    <form class="w-full">
-        <div
-                id="popup"
-                class="hidden sm:hidden fixed inset-0 z-50 items-center justify-center bg-black bg-opacity-50"
-                onclick="closePopup()">
-            <div
-                    class="relative w-4/5 h-4/5 bg-white shadow-lg rounded-md"
-                    onclick="Event.stopPropagation()">
-                <div id="sp-map" class="w-full h-full p-4">
-                </div>
+    <div class="w-full">
+        <div id="popup"
+             class="hidden sm:hidden fixed inset-0 z-50 items-center justify-center bg-black bg-opacity-50"
+             onclick="closePopup()">
+            <div class="relative w-4/5 h-4/5 bg-white shadow-lg rounded-md" onclick="Event.stopPropagation()">
+                <div id="sp-map" class="w-full h-full p-4"></div>
             </div>
         </div>
-
         <div class="flex flex-col">
             <label class="text-center bg-red-50 flex justify-center items-center w-full" style="aspect-ratio: 5/1">
-
             </label>
             <div class="flex">
                 <div class="flex w-full mx-4">
@@ -77,7 +71,7 @@
                 <div id="map" class="w-full h-[1000px]"></div>
             </section>
         </div>
-    </form>
+    </div>
 </main>
 <th:block th:replace="~{fragment/footer :: footer}"/>
 <th:block th:replace="~{fragment/script :: flowbite}"/>
