[update] スマホ版のポップアップ表示の方のマップでも経路表示ができるようになった

--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -23,6 +23,11 @@
             // };
             initAutoComplete();
             initializeMaps(placeIds, travelModes, options);
+
+            window.closePopup = function() {
+                openPopupMap(placeIds,travelModes,options);
+            }
+
         }
     </script>
 </th:block>
