--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
         </div>
     </form>
     <div class="mt-10">
-        <a th:href="@{/password-reset}" class="text-sm text-link hover:text-link-hover underline">パスワードを忘れた方</a>
+        <a th:href="@{/reset-password}" class="text-sm text-link hover:text-link-hover underline">パスワードを忘れた方</a>
     </div>
 </main>
 
