--- a/src/main/resources/templates/reset-password/index.html
+++ b/src/main/resources/templates/reset-password/index.html
@@ -7,10 +7,10 @@
     <h2 class="text-center sm:text-3xl text-2xl font-medium mb-4">パスワードリセット</h2>
     <p class="text-base text-label">登録したメールアドレスを入力してください</p>
     <!--    TODO:遷移先の指定-->
-    <form th:action="@{/password-reset}" th:object="${sendResetPasswordForm}" method="post" class="w-full sm:max-w-lg max-w-xs">
+    <form th:action="@{/reset-password}" th:object="${sendResetPasswordMailForm}" method="post" class="w-full sm:max-w-lg max-w-xs">
         <div class="mb-28 mt-16">
             <label for="mail" class="block sm:text-base text-sp-default mb-2">メールアドレス</label>
-            <input th:field="*{mailAddress}" id="mail" type="email" required class="w-full input"/>
+            <input th:field="*{email}" id="mail" type="email" required class="w-full input"/>
         </div>
         <div class="flex justify-center">
             <button type="button" class="sm:mx-10 mx-5 block items-center justify-center button-secondary" onclick="window.location.href='/login'">キャンセル</button>
