削除フラグメントの読み込み

--- a/src/main/resources/templates/share/plan.html
+++ b/src/main/resources/templates/share/plan.html
@@ -27,8 +27,8 @@
                         <button type="button" class="mx-2">
                             <th:block th:replace="~{fragment/popup :: link-share}"/>
                         </button>
-                        <button type="button" onclick="deletePopup()" class="mx-2">
-                            <th:block th:replace="~{fragment/svg :: trash}"/>
+                        <button type="button" class="mx-2">
+                            <th:block th:replace="~{fragment/popup :: delete-plan}"/>
                         </button>
                         <button onclick="openPopup()" class="sm:hidden inline-block h-12 w-12 my-auto mr-8 cursor-pointer">
                             <th:block th:replace="~{fragment/svg :: map}"/>
