scriptの読み込みを変更

--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -83,5 +83,9 @@
 <th:block th:fragment="packing">
     <script src="/js/packings.js"></script>
 </th:block>
+
+<th:block th:fragment="linkShare">
+    <script src="/js/linkShareButton.js"></script>
+</th:block>
 </body>
 </html>
