--- a/src/main/resources/templates/share/plan.html
+++ b/src/main/resources/templates/share/plan.html
@@ -76,10 +76,9 @@
 </main>
 <th:block th:replace="~{fragment/footer :: footer}"/>
 <th:block th:replace="~{fragment/script :: flowbite}"/>
-<th:block th:replace="~{fragment/script :: googleMapsAPI}"/>
+<th:block th:replace="~{fragment/script :: linkShare}"/>
 <th:block th:replace="~{fragment/script :: map}"/>
 <th:block th:replace="~{fragment/script :: modal}"/>
-<!--<th:block th:replace="~{fragment/script :: popup}"/>-->
-<th:block th:replace="~{fragment/script :: check}"/>
+<th:block th:replace="~{fragment/script :: googleMapsAPI}"/>
 </body>
 </html>
