プラン削除JSの読み込み

--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -87,5 +87,9 @@
 <th:block th:fragment="linkShare">
     <script src="/js/linkShareButton.js"></script>
 </th:block>
+
+<th:block th:fragment="deletePlan">
+    <script src="/js/deletePlan.js"></script>
+</th:block>
 </body>
 </html>
