--- a/src/main/resources/templates/share/plan.html
+++ b/src/main/resources/templates/share/plan.html
@@ -77,6 +77,7 @@
 <th:block th:replace="~{fragment/footer :: footer}"/>
 <th:block th:replace="~{fragment/script :: flowbite}"/>
 <th:block th:replace="~{fragment/script :: linkShare}"/>
+<th:block th:replace="~{fragment/script :: deletePlan}"/>
 <th:block th:replace="~{fragment/script :: map}"/>
 <th:block th:replace="~{fragment/script :: modal}"/>
 <th:block th:replace="~{fragment/script :: googleMapsAPI}"/>
