--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -87,5 +87,9 @@
 <th:block th:fragment="createPlanSubmit">
     <script src="/js/createPlanSubmit.js"></script>
 </th:block>
+
+<th:block th:fragment="walkCheckbox">
+    <script src="/js/walkCheckbox.js"></script>
+</th:block>
 </body>
 </html>
