--- a/src/main/resources/templates/plan/create.html
+++ b/src/main/resources/templates/plan/create.html
@@ -84,11 +84,11 @@
                                 </div>
                                 <div class="my-1 sm:text-base text-sm">
                                     <label for="walkFlag">
-                                        <input type="checkbox" form="updateDay" id="walkFlag" name="walkFlag" value="walkFlag" th:checked="${updateDayForm.walkingTime}" class="before:content[''] peer relative h-5 w-5 cursor-pointer appearance-none rounded border border-blue-gray-200 transition-all before:absolute before:top-2/4 before:left-2/4 before:block before:h-5 before:w-5 before:-translate-y-2/4 before:-translate-x-2/4 before:rounded-full before:bg-blue-gray-500 before:opacity-0 before:transition-opacity checked:border-blue-700 checked:bg-blue-700 checked:before:bg-blue-700 hover:before:opacity-10">
+                                        <input type="checkbox" form="updateDay" id="walkFlag" name="walkFlag" value="walkFlag" checked class="before:content[''] peer relative h-5 w-5 cursor-pointer appearance-none rounded border border-blue-gray-200 transition-all before:absolute before:top-2/4 before:left-2/4 before:block before:h-5 before:w-5 before:-translate-y-2/4 before:-translate-x-2/4 before:rounded-full before:bg-blue-gray-500 before:opacity-0 before:transition-opacity checked:border-blue-700 checked:bg-blue-700 checked:before:bg-blue-700 hover:before:opacity-10">
                                         <span class="ml-2 text-center">徒歩で移動可能な時間を指定</span>
                                     </label>
                                 </div>
-                                <label class="ml-10"><input type="number" id="walkingTime" name="walkingTime" th:field="${updateDayForm.walkingTime}" class="sm:w-56 w-32 sm:h-8 h-6 border border-b-gray-400 rounded-lg text-base text-center disabled:bg-[#e5e5e5] disabled:border-[#888] disabled:text-[#888]" min="0" max="" disabled><span class="mx-4">分</span></label>
+                                <label class="ml-10"><input type="number" id="walkThreshold" name="walkThreshold" th:field="${updateDayForm.walkThreshold}" class="sm:w-56 w-32 sm:h-8 h-6 border border-b-gray-400 rounded-lg text-base text-center disabled:bg-[#e5e5e5] disabled:border-[#888] disabled:text-[#888]" min="0" max=""><span class="mx-4">分</span></label>
                             </div>
                         </details>
                     </section>
@@ -132,6 +132,7 @@
 <th:block th:replace="~{fragment/script :: modal}"/>
 <th:block th:replace="~{fragment/script :: check}"/>
 <th:block th:replace="~{fragment/script :: svgCheckbox}"/>
+<th:block th:replace="~{fragment/script :: walkCheckbox}"/>
 <th:block th:replace="~{fragment/script :: googleMapsAPI}"/>
 </body>
 </html>
