top1.png の代わりに top1.jpg を利用する

--- a/src/main/resources/templates/plan/list.html
+++ b/src/main/resources/templates/plan/list.html
@@ -23,7 +23,7 @@
                class="block border overflow-hidden rounded-lg block-list w-[22rem] sm:w-[29.1875rem] h-52 sm:h-64 hover:shadow-lg my-8">
                 <div class="flex justify-center my-3 mx-3 h-36 sm:h-48">
                     <!-- TODO:カバー画像のパスを入れる -->
-                    <img th:src="@{/images/top1.png}" class="object-cover w-full h-full aspect-video" alt="カバー画像">
+                    <img th:src="@{/images/top1.jpg}" class="object-cover w-full h-full aspect-video" alt="カバー画像">
                 </div>
                 <div class="flex justify-between">
                     <span th:text="${plan.title}" class="mx-4 text-base md:text-xl"></span>
