--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -5,7 +5,7 @@
 <th:block th:replace="~{fragment/header :: header}"/>
 <main class="flex-grow">
     <div class="relative">
-        <img th:src="@{/images/top1.png}" alt="スライドショー" id="images" class="w-full h-3/5">
+        <img th:src="@{/images/top1.jpg}" alt="スライドショー" id="images" class="w-full h-3/5">
         <div class="absolute flex flex-col inset-0 items-center justify-center">
             <h1 class="font-extrabold my-3 text-white text-opacity-80 text-4xl sm:text-7xl">たびすけっち</h1>
             <p class="text-white text-opacity-80 text-base sm:text-title">あなたの旅のお供に</p>
