--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -15,9 +15,7 @@
         </div>
         <div class="flex flex-col">
             <label class="text-center bg-red-50 flex justify-center items-center w-full" style="aspect-ratio: 5/1">
-                <!--            TODO:画像インプット用のmodalを作成する-->
-                <!--            <th:block th:replace="~{fragment/modal :: }"/>-->
-                <th:block th:replace="~{fragment/svg :: camera}"/>
+                <th:block th:replace="~{fragment/popup :: cover-image}"/>
             </label>
             <div class="flex">
                 <span class="inline-block h-12 w-12 my-auto ml-8"></span>
@@ -144,6 +142,7 @@
 <th:block th:replace="~{fragment/script :: modal}"/>
 <th:block th:replace="~{fragment/script :: check}"/>
 <th:block th:replace="~{fragment/script :: svgRadioButton}"/>
+<th:block th:replace="~{fragment/script :: previewImage}"/>
 <th:block th:replace="~{fragment/script :: googleMapsAPI}"/>
 </body>
 </html>
