--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -29,12 +29,12 @@
         </div>
         <div class="mx-10 flex">
             <section class="sm:w-1/2 w-full">
-                <div class="flex space-x-0 pb-[0.625rem] border-b-2 mt-6">
-                    <div th:each="day : ${editDayForm.days}">
-                        <a th:href="@{/plan/edit(selectedDay=${day}, maxDays=${editDayForm.maxDays})}"
-                           th:classappend="${day == editDayForm.selectedDay} ? 'pt-5 pb-3 sm:px-6 lg:px-12 px-8 bg-green-600 text-white h-12' : 'pt-3 pb-3 sm:px-4 lg:px-10 px-6 bg-green-400 text-white'"
+                <div class="flex items-end space-x-0 pb-[0.625rem] border-b-2 mt-6">
+                    <div th:each="index : ${#numbers.sequence(1, days)}">
+                        <a th:href="@{/plan/d/__${uuid}__/edit(day=__${index}__)}"
+                           th:classappend="${index == selectedDay} ? 'pt-5 pb-3 sm:px-6 lg:px-12 px-8 bg-green-600 text-white text-lg h-12' : 'pt-3 pb-3 sm:px-4 lg:px-10 px-6 bg-green-400 text-white'"
                            class="rounded-t-md text-center items-center cursor-pointer">
-                            <span th:text="${day} + '日目'"></span>
+                            <span th:text="${index} + '日目'"></span>
                         </a>
                     </div>
                 </div>
